[tool.poetry]
name = "ml-utils"
version = "0.1.0"
description = ""
authors = ["jason.li <jasonli772016@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
